VN - Added Font Awsome icons.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <h3>Here are a few things I've thought about</h3>
 
-  <h4>Thought Blurb 1:</h4>
+  <h4><i class="fab fa-font-awesome"></i>Thought Blurb 1:</h4>
   <p class="thought1">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
     temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
@@ -46,7 +46,7 @@
     temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
   </p>
 
-  <h4>Thought Blurb 2:</h4>
+  <h4><i class="fab fa-font-awesome"></i>Thought Blurb 2:</h4>
   <p class="thought2">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
     temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
@@ -66,7 +66,7 @@
     temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
   </p>
 
-  <h4>Thought Blurb 3:</h4>
+  <h4><i class="fab fa-font-awesome"></i>Thought Blurb 3:</h4>
   <p class="thought3">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
     temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
