--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
     integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
   <link href="https://fonts.googleapis.com/css?family=Courier+Prime|Girassol|Inria+Serif&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f843bc76a3.js" crossorigin="anonymous"></script>
   <link rel='stylesheet' type='text/css' href='assets/css/style.css'>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 
